# essaycorrect

./: README.md
agent/smartscribe/: pyproject.toml
agent/smartscribe/smartscribe/: smartscribe.py  start.py
ui/: package-lock.json  package.json  pnpm-lock.yaml
ui/app/: chatbotComponent.tsx
ui/app/components/: essayComponent.tsx
